ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=devops,Team=devops
spec:
  ingressClassName: alb
  rules:
    - host: jenkins.integracamdevops.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service: 
                name: jenkins
                port:
                  number: 8080
